fix and new departments

--- a/cente-collective-use-scientific-instruments.html
+++ b/cente-collective-use-scientific-instruments.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div id="wrapper">
-		<header id="header">
+    <header id="header">
 			<div class="container">
 				<div class="header-top">
 					<a href="home.html" class="logo-holder">
@@ -94,15 +94,31 @@
 			</div>
 		</header>
 		<main id="main">
-      <section class="section section-achievement">
+      <section class="section section-ccusi">
         <div class="container">
-          <h4><a href="cmcc.html">ВІДДІЛ КРИСТАЛІЧНИХ МАТЕРІАЛІВ СКЛАДНИХ СПОЛУК</a></h4>
-          <h3 class="uk-text-center">Напрями досліджень</h3>
-          <ul class="achievement-list">
-            <li>Оптимізація структурно-фазового стану, морфології та оптичних властивостей  оксидних нанопорошків та прозорої кераміки для оптики та лазерної техніки (Y 2 O 3 , Lu 2 O 3 , Y 3 Al 5 O 12 , Y 2 O 3 –MgO та інші, леговані рідкісноземельними іонами);</li>
-            <li>Дослідження процесів низькотемпературної кристалізації та особливостей  синтезу оксидних нанопорошків методами хімічного співосадженя, саморозповсюдженого синтезу, та ін.</li>
-            <li>Визначення механізмів модифікації процесів дифузійного масопереносу при консолідації нанодисперсних порошків шляхом введення домішок, що сприяють спіканню.</li>
-          </ul>
+          <h3 class="uk-text-center text-transform-uppercase">Центр колективного користування науковими приладами</h3>
+          <h4 class="uk-text-center">“Мікроскопічні та спектроскопічні методи дослідження поверхні твердих тіл”</h4>
+          <h5>Основні завдання Центру:</h5>
+          <p>Дослідження морфології та складу поверхні твердих тіл, нанооб’єктів.</p>
+          <h5>Користувачі Центру:</h5>
+          <p>Відповідно до Положення про Центри колективного користування (Постанова Президії НАН
+            України № 322 від 28.04.2004), Центр надає можливість безкоштовних досліджень для
+            установ Національної академії наук України.</p>
+            <h5>Обладнання Центру:</h5>
+          <ol>
+            <li><p>Аналітичний комплекс:</p>
+              <ul>
+                <li>нізковакуумний скануючий мікроскоп JSM-6390LV (JEOL Ltd., Японія),</li>
+                <li>енергодисперсійний спектрометр X-Max 50 (OXFORD Instruments Analytical,
+                  Великобританія);</li>
+                <li>детектор дифракції електронів HKL Channel 5 EBSD (OXFORD Instruments Analytical,
+                  Великобританія).</li>
+              </ul>
+            </li>
+            <li>Система комплексної прецизійної пробопідготовки зразків для електронної
+              мікроскопії Leica EM TXP (Leica Microsystems, Німеччина).</li>
+          </ol>
+          <p><a href="pablick/Положення про ЦККП.pdf" target="blank">Положення про Центр колективного користування науковими приладами (pdf)</a></p>
         </div>
       </section>
 		</main>
@@ -130,7 +146,7 @@
 					<p>	&#169 2021 <a href="home.html">Інститут монокристалів НАН України</a>. All Rights Reserved</p>
 				</div>
 			</div>
-			<span class="bg-img bg-page bg-img-2"><img src="images/bg-img-1.svg" alt="img"></span>
+			<span class=" bg-img-2"></span>
 		</footer>
 	</div>
 		
