--- a/graduate-school.html
+++ b/graduate-school.html
@@ -61,6 +61,7 @@
 											<li class="navigation-item"><a href="noc.html" class="navigation-link">Відділ нелінійно-оптичних кристалів</a></li>
 										</ul>
 									</li>
+									<li class="navigation-item"><a href="cente-collective-use-scientific-instruments.html" class="navigation-link">Центр колективного користування науковими приладами</a></li>
 									<li class="navigation-item ">
 										<a href="#auxiliary-departments-submenu" class="navigation-link" uk-toggle="target: #auxiliary-departments-submenu; animation: uk-animation-fade">Допоміжні відділи</a>
 										<ul class="sub-submenu" id="auxiliary-departments-submenu" hidden>
@@ -140,7 +141,7 @@
             <p>Прийом до аспірантури і докторантури Інституту проводять відповідно до <a href="#" target="_blank">«Правил прийому до аспірантури Інституту монокристалів НАН України»</a> і <a href="#" target="_blank">«Правил прийому до докторантури Інституту монокристалів НАН України»</a>.</p>
             <h4>Заяви вступників приймаються за адресою: м. Харків, пр. Науки 60, Інститут монокристалів НАН України, кабінет 711.</h4>
             <h3>Контакти:</h3>
-            <p>Завідувачка аспірантури <a href="pablick/otd7/cv/CV_Добротворська_Відділ 7.pdf" target="_blank">Добротворська Марія Вікторівна</a>, <a href="tel:+380573410314">тел.: +38(057) 341-03-14</a>, <a href="mailto:mdobro@isc.kharkov.ua.">e-mail: mdobro@isc.kharkov.ua.</a></p>
+            <p>Завідувачка аспірантури к.ф.-м.н.<a href="pablick/otd7/cv/CV_Добротворська_Відділ 7.pdf" target="_blank">Добротворська Марія Вікторівна</a>, <a href="tel:+380573410314">тел.: +38(057) 341-03-14</a>, <a href="mailto:mdobro@isc.kharkov.ua.">e-mail: mdobro@isc.kharkov.ua.</a></p>
             <p>Питання до вступного іспиту до аспірантури зі спеціальності 132  <a href="#">«Матеріалознавство»</a></p>
             <h4>Положення та правила</h4>
             <ul>
