--- a/home.html
+++ b/home.html
@@ -61,6 +61,7 @@
 											<li class="navigation-item"><a href="noc.html" class="navigation-link">Відділ нелінійно-оптичних кристалів</a></li>
 										</ul>
 									</li>
+									<li class="navigation-item"><a href="cente-collective-use-scientific-instruments.html" class="navigation-link">Центр колективного користування науковими приладами</a></li>
 									<li class="navigation-item ">
 										<a href="#auxiliary-departments-submenu" class="navigation-link" uk-toggle="target: #auxiliary-departments-submenu; animation: uk-animation-fade">Допоміжні відділи</a>
 										<ul class="sub-submenu" id="auxiliary-departments-submenu" hidden>
@@ -273,22 +274,16 @@
 			<h2>Лазерна керамiка</h2>
 			<div class="modal-body" uk-overflow-auto>
 				<div class="card-modal">
-					<div class="card-img"><img src="images/modal-img-2-1.png" alt="img"></div>
+					<div class="card-img"><img src="images/modal-img-2-1.jpg" alt="img"></div>
 					<div class="card-text">
-						<h5>Ітрій-алюмінієвий	гранат Y3Al5O12</h5>
-						<ul>
-							<li>Елементарна комірка –	160 атомів;</li>
-							<li>3 типи катіоних позицій;</li>
-							<li>Ширина забороненої зони 6еВ;</li>
-							<li>Висока ізоморфна	ємність для легування	РЗМ іонами.</li>
-						</ul>
-						<h6>Nd3+, Yb3+, Er3+...</h6>
+						<h5>Кераміки Y<sub>2</sub>O<sub>3</sub>:RE, YAG:RE (RE=Nd, Yb, Sm), Y<sub>2</sub>O<sub>3</sub>-MgO </h5> 
+						<p>одержано методами реакційного спікання та іскрового плазмового  спікання нанопорошків спеціального гранулометричного складу</p>
 					</div>	
 				</div>
 				<div class="card-modal">
 					<div class="card-img"><img src="images/modal-img-2-2.png" alt="img"></div>
 					<div class="card-text">
-						<h5>Ітрій-алюмінієвий	гранат Y3Al5O12</h5>
+						<h5>Високощільна полікристалічна структура</h5>
 						<ul>
 							<li>Щільна упаковка	оптично-ізотропних	зерен;</li>
 							<li>Міжзеренні границі	товщиною ~1 нм,	прозорі для світла.</li>
@@ -298,7 +293,7 @@
 				<div class="card-modal">
 					<div class="card-img"><img src="images/modal-img-2-3.png" alt="img"></div>
 					<div class="card-text">
-						<h5>Лазерна кераміка	Nd3+:YAG</h5>
+						<h5>Лазерна кераміка	Nd<sup>3+</sup>:YAG</h5>
 						<ul>
 							<li>Концентрація активатора до 4 ат.%;</li>
 							<li>Високий ККД генерації;</li>
