--- a/noc.html
+++ b/noc.html
@@ -61,6 +61,7 @@
 											<li class="navigation-item"><a href="noc.html" class="navigation-link">Відділ нелінійно-оптичних кристалів</a></li>
 										</ul>
 									</li>
+									<li class="navigation-item"><a href="cente-collective-use-scientific-instruments.html" class="navigation-link">Центр колективного користування науковими приладами</a></li>
 									<li class="navigation-item ">
 										<a href="#auxiliary-departments-submenu" class="navigation-link" uk-toggle="target: #auxiliary-departments-submenu; animation: uk-animation-fade">Допоміжні відділи</a>
 										<ul class="sub-submenu" id="auxiliary-departments-submenu" hidden>
@@ -142,7 +143,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/25/cv/CV_naydenov.pdf" class="people-name" target="blanck">Найдьонов Сергій Вячеславович</a>
-                  <p>Провiдний науковий спiвробiтник. Доктор фізико-математичних наук.  Старший науковий співробітник. </p>
+                  <p>Провiдний науковий спiвробiтник, доктор фізико-математичних наук, старший науковий співробітник. </p>
                 </div>
                 <div class="people-contact">
                   <a href="#naydenov-contact-holder" class="people-contact-link" uk-toggle="target: #naydenov-contact-holder; animation: uk-animation-fade">Контакти</a>
@@ -162,7 +163,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/25/cv/CV_voronov.pdf" class="people-name" target="blanck">Воронов Олексій Петрович</a>
-                  <p> Провiдний науковий спiвробiтник. Доктор технічних наук. Старший науковий співробітник. </p>
+                  <p>Провiдний науковий спiвробiтник, доктор технічних наук, старший науковий співробітник.</p>
                 </div>
                 <div class="people-contact">
                   <a href="#voronov-contact-holder" class="people-contact-link" uk-toggle="target: #voronov-contact-holder; animation: uk-animation-fade">Контакти</a>
@@ -222,7 +223,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/25/cv/CV_bezkrovna.pdf" class="people-name" target="blanck">Безкровна Ольга Миколаївна</a>
-                  <p>Старша наукова спiвробiтниця, кандидатка хімічних наук</p>
+                  <p>Старша наукова спiвробiтниця, докторка технічних наук</p>
                 </div>
                 <div class="people-contact">
                   <a href="#bezkrovna-contact-holder" class="people-contact-link" uk-toggle="target: #bezkrovna-contact-holder; animation: uk-animation-fade">Контакти</a>
@@ -298,7 +299,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/25/cv/CV_kostenyukova.pdf" class="people-name" target="blanck">Костенюкова Олена Iгорівна</a>
-                  <p>Старша наукова спiвробiтниця, кандидатка хімічних наук</p>
+                  <p>Молодша наукова співробітниця, кандидатка технічних наук</p>
                 </div>
                 <div class="people-contact">
                   <a href="#kostenyukova-contact-holder" class="people-contact-link" uk-toggle="target: #kostenyukova-contact-holder; animation: uk-animation-fade">Контакти</a>
@@ -336,7 +337,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/25/cv/CV_kapustnik.pdf" class="people-name" target="blanck">Капустник Олексій Костянтинович</a>
-                  <p>Молодший науковий співробітник</p>
+                  <p>Молодший науковий співробітник, кандидат фізико-математичних наук</p>
                 </div>
                 <div class="people-contact">
                   <a href="#kapustnik-contact-holder" class="people-contact-link" uk-toggle="target: #kapustnik-contact-holder; animation: uk-animation-fade">Контакти</a>
@@ -355,7 +356,7 @@
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/25/cv/CV_terzin.pdf" class="people-name" target="blanck">Терзін Iгор Сергійович</a>
-                  <p>Старша наукова спiвробiтниця, кандидатка хімічних наук</p>
+                  <p>Молодший науковий спiвробiтник</p>
                 </div>
                 <div class="people-contact">
                   <a href="#terzin-contact-holder" class="people-contact-link" uk-toggle="target: #terzin-contact-holder; animation: uk-animation-fade">Контакти</a>
