--- a/leadership.html
+++ b/leadership.html
@@ -61,6 +61,7 @@
 											<li class="navigation-item"><a href="noc.html" class="navigation-link">Відділ нелінійно-оптичних кристалів</a></li>
 										</ul>
 									</li>
+									<li class="navigation-item"><a href="cente-collective-use-scientific-instruments.html" class="navigation-link">Центр колективного користування науковими приладами</a></li>
 									<li class="navigation-item ">
 										<a href="#auxiliary-departments-submenu" class="navigation-link" uk-toggle="target: #auxiliary-departments-submenu; animation: uk-animation-fade">Допоміжні відділи</a>
 										<ul class="sub-submenu" id="auxiliary-departments-submenu" hidden>
@@ -136,7 +137,7 @@
                       <li><a href="fax:+380573409343">факс: +38 (057) 340 93 43</a></li>
                     </ul>
                     <ul class="mail-list">
-                      <li><a href="mailto:pritula@isc.kharkov.ua">vereschak@isc.kharkov.ua </a></li>
+                      <li><a href="mailto:vereschak@isc.kharkov.ua">vereschak@isc.kharkov.ua </a></li>
                     </ul>
                   </div>
                 </div>
@@ -179,7 +180,7 @@
                       <li><a href="fax:+380573409343">факс: +38(057) 340 93 43</a></li>
                     </ul>
                     <ul class="mail-list">
-                      <li><a href="mailto:pritula@isc.kharkov.ua">dped@isc.kharkov.ua</a></li>
+                      <li><a href="mailto:dped@isc.kharkov.ua">dped@isc.kharkov.ua</a></li>
                     </ul>
                   </div>
                 </div>
