--- a/tcfs-publications.html
+++ b/tcfs-publications.html
@@ -61,6 +61,7 @@
                         <li class="navigation-item"><a href="noc.html" class="navigation-link">Відділ нелінійно-оптичних кристалів</a></li>
                       </ul>
                     </li>
+                    <li class="navigation-item"><a href="cente-collective-use-scientific-instruments.html" class="navigation-link">Центр колективного користування науковими приладами</a></li>
                     <li class="navigation-item ">
                       <a href="#auxiliary-departments-submenu" class="navigation-link" uk-toggle="target: #auxiliary-departments-submenu; animation: uk-animation-fade">Допоміжні відділи</a>
                       <ul class="sub-submenu" id="auxiliary-departments-submenu" hidden>
