--- a/cmcc-publications.html
+++ b/cmcc-publications.html
@@ -97,7 +97,7 @@
       <section class="section section-publications">
         <div class="container">
           <h4><a href="cmcc.html">ВІДДІЛ КРИСТАЛІЧНИХ МАТЕРІАЛІВ СКЛАДНИХ СПОЛУК</a></h4>
-          <h3 class="uk-text-center">Наукові публікації (2018 – 2021)</h3>
+          <h3 class="uk-text-center">Наукові публікації (вибрані, за період 2018-2021)</h3>
           <ul class="publications-books-list">
             <li>N.A. Safronova, R.P. Yavetskiy, O.S. Kryzhanovska, M.V. Dobrotvorska, A.E. Balabanov,  I.O. Vorona, А.V. Tolmachev, V.N. Baumer, I. Matolínová, D.Yu. Kosyanov, O.O. Shichalin,  E.K. Papynov, S. Hau, C. Gheorghe. A novel IR-transparent Ho 3+ :Y 2 O 3 –MgO nanocomposite  ceramics for potential laser applications // Ceramics International 47 (2021) 1399-1406.  2019IF: 3.830. – <a href="https://doi.org/10.1016/j.ceramint.2020.08.263" target="blank">https://doi.org/10.1016/j.ceramint.2020.08.263</a> . Q1.</li>
             <li>R.P. Yavetskiy, A.E. Balabanov, S.V. Parkhomenko, O.S. Kryzhanovska,  A.G. Doroshenko, P.V. Mateychenko, A.V. Tolmachev, Jiang Li, Nan Jiang,  L. Gheorghe, M. Enculescu. Effect of starting materials and sintering   temperature on microstructure and optical properties of Y 2 O 3 :Yb 3+ 5 at.% transparent ceramics // Journal of Advanced Ceramics 10 (2020) 49-61.  2019IF: 2.889. <a href="https://doi.org/10.1007/s40145-020-0416-3" target="blank">https://doi.org/10.1007/s40145-020-0416-3</a>. Q2.</li>
