--- a/cmcc-research.html
+++ b/cmcc-research.html
@@ -100,7 +100,7 @@
           <h3 class="uk-text-center">Напрями досліджень</h3>
           <ul class="achievement-list">
             <li>Оптимізація структурно-фазового стану, морфології та оптичних властивостей  оксидних нанопорошків та прозорої кераміки для оптики та лазерної техніки (Y 2 O 3 , Lu 2 O 3 , Y 3 Al 5 O 12 , Y 2 O 3 –MgO та інші, леговані рідкісноземельними іонами);</li>
-            <li>Дослідження процесів низькотемпературної кристалізації та особливостей  синтезу оксидних нанопорошків методами хімічного співосадженя, саморозповсюдженого синтезу, та ін.</li>
+            <li>Дослідження процесів низькотемпературної кристалізації та особливостей  синтезу оксидних нанопорошків методами хімічного співосадження, саморозповсюдженого синтезу, та ін.</li>
             <li>Визначення механізмів модифікації процесів дифузійного масопереносу при консолідації нанодисперсних порошків шляхом введення домішок, що сприяють спіканню.</li>
           </ul>
         </div>
