--- a/home.html
+++ b/home.html
@@ -146,7 +146,7 @@
 					<div class="card-technology">
 						<div class="card-content">
 							<span class="underline-left"></span>
-							<h2 class="card-title">Теорія конденсованого стану речовени</h2>
+							<h2 class="card-title">Теорія конденсованого стану речовини</h2>
 							<div class="card-img"><img src="images/card-img-3.png" alt="Теорія конденсованого стану речовени"></div>
 							<ul>
 								<li>Нелінійні та квантові властивості структурно-складних об’єктів;</li>
@@ -243,7 +243,7 @@
 				<div class="card-modal">
 					<div class="card-img"><img src="images/modal-img-1-1.png" alt="img"></div>
 					<div class="card-text">
-						<p>Побудовано теорію еволюції вакансійної пори у частинках матриці сферичної форми. У випадку твердого стану методом молекулярної динаміки виявлено існування магічнихпор, які можуть існувати протягом тривалого часу. Частинка з магічною порою  утворює метастабільний стан. </p>
+						<p>Побудовано теорію еволюції вакансійної пори у частинках матриці сферичної форми. У випадку твердого стану методом молекулярної динаміки виявлено існування магічних пор, які можуть існувати протягом тривалого часу. Частинка з магічною порою  утворює метастабільний стан. </p>
 					</div>
 				</div>
 				<div class="card-modal">
