--- a/olc.html
+++ b/olc.html
@@ -126,7 +126,7 @@
                   <a href="#nizhankovsky-contact-holder" class="people-contact-link" uk-toggle="target: #nizhankovsky-contact-holder; animation: uk-animation-fade">Контакти</a>
                   <div class="peole-contact-holder" id="nizhankovsky-contact-holder" hidden>
                     <ul class="tel-list">
-                      <li><a href="tel:+380573410167">тел.: +38 (057) 341 01 67</a></li>
+                      <li><a href="tel:+380573410169">тел.: +38 (057) 341 01 69</a></li>
                     </ul>
                     <ul class="mail-list">
                       <li><a href="mailto:pritula@isc.kharkov.ua">nizhankovsky@isc.kharkov.ua</a></li>
@@ -177,7 +177,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Vovk.jpg" alt="Вовк"></div>
+              <div class="card-img"><img src="images/Oleh-VovK.jpg" alt="Вовк"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_Вовк Олег_Відділ 23.pdf" class="people-name" target="blanck">Вовк Олег Михайлович </a>
@@ -197,7 +197,7 @@
               </div>
             </div>
             <div class="card-people">
-              <div class="card-img"><img src="images/Вовк.о.jpg" alt="Вовк Олена"></div>
+              <div class="card-img"><img src="images/Vovk.jpg" alt="Вовк Олена"></div>
               <div class="card-text">
                 <div class="card-text-top">
                   <a href="pablick/23/cv/CV_Вовк Олена_Відділ 23.pdf" class="people-name" target="blanck">Вовк Олена Олександрівна</a>
@@ -322,7 +322,7 @@
                   <a href="#sirik-contact-holder" class="people-contact-link" uk-toggle="target: #sirik-contact-holder; animation: uk-animation-fade">Контакти</a>
                   <div class="peole-contact-holder" id="sirik-contact-holder" hidden>
                     <ul class="tel-list">
-                      <li><a href="tel:+380573410167">тел.: +38 (057) 341 01 67</a></li>
+                      <li><a href="tel:+380573410169">тел.: +38 (057) 341 01 69</a></li>
                     </ul>
                     <ul class="mail-list">
                       <li><a href="mailto:lab15.oxydal@gmail.com">lab15.oxydal@gmail.com</a></li>
