--- a/graduate-school.html
+++ b/graduate-school.html
@@ -103,12 +103,12 @@
             <p>Освітньо-наукова програма аспірантури розробляється провідними вченими Інституту монокристалів НАН України:</p>
             <h3>Викладачі:</h3>
             <ol>
-              <li>Гарант освітньої програми - завідувач відділу, старший дослідник, професор, доктор технічних наук <a href="pablick/otd7/cv/CV_Явецький_Відділ 7.pdf" target="_blank">Явецький Р.П.</a> зі стажем наукової роботи понад 20 років, є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, керамічних та наноструктурних матеріалів.</li>
-              <li>Провідний науковий співробітник, професор, доктор технічних наук <a href="pablick/otd7/cv/CV_Литвинов_Відділ 7.pdf" target="_blank">Литвинов Л.А.</a> зі стажем наукової (47 років) та науково-педагогічної (10 років) роботи, є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, розробки технології вирощування монокристалів сапфіру функціонального та конструкційного призначення.</li>
-              <li>Старший науковий співробітник, старший дослідник, доктор технічних наук <a href="pablick/25/cv/CV_doljenkova.pdf" target="_blank">Долженкова О.Ф.</a> зі стажем наукової роботи 34 роки, є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, дослідження структури та фізичних властивостей матеріалів.</li>
-              <li>Старший науковий співробітник, кандидат технічних наук <a href="pablick/23/cv/CV_Вовк Олег_Відділ 23.pdf" target="_blank">Вовк О.О.</a> зі стажем наукової роботи 14 років є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, розробки технологій виготовлення монокристалічних та керамічних матеріалів та їх обробки.</li>
-              <li>Старший науковий співробітник, доктор технічних наук <a href="pablick/25/cv/CV_bezkrovna.pdf" target="_blank">Безкровна О.М.</a> зі стажем наукової роботи 12 років є фахівцем в галузі матеріалознавства, зокрема, розробки технологій виготовлення наноструктурних матеріалів.</li>
-              <li>Науковий співробітник, кандидат технічних наук <a href="pablick/otd7/cv/CV_Сафронова_Відділ 7.pdf" target="_blank">Сафронова (Дуліна) Н.А.</a> зі стажем наукової роботи 12 років є фахівцем в галузі матеріалознавства, зокрема, розробки технологій виготовлення нанопорошків та наноструктурних матеріалів.</li>
+              <li>Гарант освітньої програми - завідувач відділу, старший дослідник, професор, доктор технічних наук <a href="pablick/otd7/cv/CV_Явецький_Відділ 7.pdf" target="blank">Явецький Р.П.</a> зі стажем наукової роботи понад 20 років, є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, керамічних та наноструктурних матеріалів.</li>
+              <li>Провідний науковий співробітник, професор, доктор технічних наук <a href="pablick/otd7/cv/CV_Литвинов_Відділ 7.pdf" target="blank">Литвинов Л.А.</a> зі стажем наукової (47 років) та науково-педагогічної (10 років) роботи, є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, розробки технології вирощування монокристалів сапфіру функціонального та конструкційного призначення.</li>
+              <li>Старший науковий співробітник, старший дослідник, доктор технічних наук <a href="pablick/25/cv/CV_doljenkova.pdf" target="blank">Долженкова О.Ф.</a> зі стажем наукової роботи 34 роки, є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, дослідження структури та фізичних властивостей матеріалів.</li>
+              <li>Старший науковий співробітник, кандидат технічних наук <a href="pablick/23/cv/CV_Вовк Олег_Відділ 23.pdf" target="blank">Вовк О.О.</a> зі стажем наукової роботи 14 років є професіоналом з досвідом роботи в галузі матеріалознавства, зокрема, розробки технологій виготовлення монокристалічних та керамічних матеріалів та їх обробки.</li>
+              <li>Старший науковий співробітник, доктор технічних наук <a href="pablick/25/cv/CV_bezkrovna.pdf" target="blank">Безкровна О.М.</a> зі стажем наукової роботи 12 років є фахівцем в галузі матеріалознавства, зокрема, розробки технологій виготовлення наноструктурних матеріалів.</li>
+              <li>Науковий співробітник, кандидат технічних наук <a href="pablick/otd7/cv/CV_Сафронова_Відділ 7.pdf" target="blank">Сафронова (Дуліна) Н.А.</a> зі стажем наукової роботи 12 років є фахівцем в галузі матеріалознавства, зокрема, розробки технологій виготовлення нанопорошків та наноструктурних матеріалів.</li>
             </ol>
             <h3>Освітня програма «Монокристалічні, керамічні та наноструктурні матеріали» (загальний обсяг 40 кредитів ЄКТС) містить наступні навчальні дисципліни:</h3>
             <h4>Загальна підготовка:</h4>
@@ -138,31 +138,31 @@
             <p>Наукова складова включає проведення наукового дослідження, результати якого мають наукову новизну, теоретичне та практичне значення, та оформлення його результатів у вигляді дисертації.</p>
             <p>Навчання в рамках аспірантури передбачає тісну співпрацю з науковим керівником на всіх етапах роботи над дисертаційним дослідженням.</p>
             <p>Аспірантам, які навчаються в Інституті, надається щомісячна стипендія з фондів НАН України. Фінансова підтримка гарантована на період всього навчання</p>
-            <p>Прийом до аспірантури і докторантури Інституту проводять відповідно до <a href="#" target="_blank">«Правил прийому до аспірантури Інституту монокристалів НАН України»</a> і <a href="#" target="_blank">«Правил прийому до докторантури Інституту монокристалів НАН України»</a>.</p>
+            <p>Прийом до аспірантури і докторантури Інституту проводять відповідно до <a href="pablick/graduate-school/Правила прийома до аспірантури.pdf" target="_blank">«Правил прийому до аспірантури Інституту монокристалів НАН України»</a> і <a href="pablick/graduate-school/правила прийому до докторантури.pdf" target="blank">«Правил прийому до докторантури Інституту монокристалів НАН України»</a>.</p>
             <h4>Заяви вступників приймаються за адресою: м. Харків, пр. Науки 60, Інститут монокристалів НАН України, кабінет 711.</h4>
             <h3>Контакти:</h3>
             <p>Завідувачка аспірантури кандидат фізико-математичних наук <a href="pablick/otd7/cv/CV_Добротворська_Відділ 7.pdf" target="_blank">Добротворська Марія Вікторівна</a>, <a href="tel:+380573410314">тел.: +38(057) 341-03-14</a>, <a href="mailto:mdobro@isc.kharkov.ua.">e-mail: mdobro@isc.kharkov.ua.</a></p>
             <p>Питання до вступного іспиту до аспірантури зі спеціальності 132  <a href="#">«Матеріалознавство»</a></p>
             <h4>Положення та правила</h4>
             <ul>
-              <li>Положення про проектну групу освітньої програми та групу забезпечення спеціальності  <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про організацію навчального процесу в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Порядок підготовки здобувачів ступенів доктора філософії в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Порядок розробки та затвердження робочих програм навчальних дисциплін освітньо-наукової програми третього (освітньо-наукового) рівня вищої освіти за спеціальністю 132 Матеріалознавство <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про порядок вільного вибору здобувачами вищої освіти на третьому освітньо-науковому рівні вибіркових дисциплін <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про академічну доброчесність та етику академічних взаємовідносин в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про Комісію з питань академічної доброчесності та етики академічних взаємовідносин в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про систему виявлення та запобігання академічному плагіату в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про порядок врегулювання конфліктів в освітньому процесі в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про апеляцію результатів підсумкового контролю знань здобувачів вищої освіти в Інституті монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про внутрішнє забезпечення якості освіти Інституту монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про анкетування (опитування) здобувачів вищої освіти Інституту монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Положення про відділ аспірантури Інституту монокристалів НАН України <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про проектну групу освітньої програми та групу забезпечення спеціальності  <a href="pablick/graduate-school/Положення про проектну групу.pdf" target="_blank">(посилання на pdf)</a></li>
+              <li>Положення про організацію навчального процесу в Інституті монокристалів НАН України <a href="pablick/graduate-school/положення про організацію навчального процесу.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Порядок підготовки здобувачів ступенів доктора філософії в Інституті монокристалів НАН України <a href="pablick/graduate-school/Порядок підготовки здобувачів ступенів доктора.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Порядок розробки та затвердження робочих програм навчальних дисциплін освітньо-наукової програми третього (освітньо-наукового) рівня вищої освіти за спеціальністю 132 Матеріалознавство <a href="#" target="blank">(посилання на pdf)</a></li>
+              <li>Положення про порядок вільного вибору здобувачами вищої освіти на третьому освітньо-науковому рівні вибіркових дисциплін <a href="pablick/graduate-school/положення про порядок вільного вибору.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Положення про академічну доброчесність та етику академічних взаємовідносин в Інституті монокристалів НАН України <a href="pablick/graduate-school/Положення про академічну доброчесність.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Положення про Комісію з питань академічної доброчесності та етики академічних взаємовідносин в Інституті монокристалів НАН України <a href="pablick/graduate-school/Положення про комісію з питань академічної доброчесності.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Положення про систему виявлення та запобігання академічному плагіату в Інституті монокристалів НАН України <a href="pablick/graduate-school/Положення про систему виявлення плагіату.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Положення про порядок врегулювання конфліктів в освітньому процесі в Інституті монокристалів НАН України <a href="pablick/graduate-school/Положення про врегування конфліктів.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Положення про апеляцію результатів підсумкового контролю знань здобувачів вищої освіти в Інституті монокристалів НАН України <a href="pablick/graduate-school/Положення про апеляцію.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Положення про внутрішнє забезпечення якості освіти Інституту монокристалів НАН України <a href="pablick/graduate-school/Положення про внутрішне забеспечення якості.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Положення про анкетування (опитування) здобувачів вищої освіти Інституту монокристалів НАН України <a href="pablick/graduate-school/Положення про анкетування.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Положення про відділ аспірантури Інституту монокристалів НАН України <a href="pablick/graduate-school/положення про відділ аспірантури.pdf" target="_blank">(посилання на pdf)</a></li>
             </ul>
             <h4>Навчання</h4>
             <ul>
-              <li>Освітньо-наукова-програма <a href="#" target="_blank">(посилання на pdf)</a></li>
-              <li>Навчальний план <a href="#" target="_blank">(посилання на pdf)</a></li>
+              <li>Освітньо-наукова-програма <a href="pablick/graduate-school/" target="_blank">(посилання на pdf)</a></li>
+              <li>Навчальний план <a href="pablick/graduate-school/" target="_blank">(посилання на pdf)</a></li>
               <li>
                 <p>Робочі програми дисциплін:</p>
                 <ul>
@@ -199,15 +199,16 @@
               <li>
                 <p>Міжнародні договори </p>
                 <ul>
-                  <li><a href="#">(посилання на pdf)</a></li>
-                  <li><a href="#">(посилання на pdf)</a></li>
+                  <li>"Договір з Шанхайським Інститутом кераміки, КНР"<a href="pablick/graduate-school/ISC-SICCAS_China_2017.pdf" target="blank">(посилання на pdf)</a></li>
+                  <li>"Договір з Національним інститутом лазерів, плазми та радіаційної фізики, Румунія"<a href="pablick/graduate-school/ISC-NILPRP_Romania_2021-2025.pdf" target="blank">(посилання на pdf)</a></li>
                 </ul>
               </li>
               <li>
                 <p>Відгуки стейкхолдеров </p>
                 <ul>
-                  <li><a href="#">(посилання на pdf)</a></li>
-                  <li><a href="#">(посилання на pdf)</a></li>
+                  <li>Відгук №1<a href="pablick/graduate-school/Відгук №1.pdf" target="blank">(посилання на pdf)</a></li>
+                  <li>Відгук №1<a href="pablick/graduate-school/Відгук №2.pdf" target="blank">(посилання на pdf)</a></li>
+                  <li>Відгук №1<a href="pablick/graduate-school/Відгук №3.pdf" target="blank">(посилання на pdf)</a></li>
                 </ul>
               </li>
               <li>
@@ -217,12 +218,10 @@
                   <li><a href="#">(посилання на pdf)</a></li>
                 </ul>
               </li>
-              <li>Етичний кодекс ученого України <a href="#">(посилання на pdf)</a></li>
-              <li>Національна стратегія Індустрії 4.0 <a href="#">(посилання на pdf)</a></li>
+              <li>Етичний кодекс ученого України <a href="pablick/graduate-school/etuka_vchenogo.pdf" target="blank">(посилання на pdf)</a></li>
+              <li>Національна стратегія Індустрії 4.0 <a href="pablick/graduate-school/strategy.pdf" target="blank">(посилання на pdf)</a></li>
             </ul>
-            <p><h4>Документи до акредитації</h4> <a href="#">(посилання на pdf)</a></p>
-            <p></p>
-            <p></p>
+            <p><h4>Документи до акредитації</h4> <a href="pablick/graduate-school/" target="blank">(посилання на pdf)</a></p>
           </artticle>
         </div>
       </section>
