event-news page

--- a/cente-collective-use-scientific-instruments.html
+++ b/cente-collective-use-scientific-instruments.html
@@ -108,7 +108,7 @@
           <ol>
             <li><p>Аналітичний комплекс:</p>
               <ul>
-                <li>нізковакуумний скануючий мікроскоп JSM-6390LV (JEOL Ltd., Японія),</li>
+                <li>нізьковакуумний скануючий мікроскоп JSM-6390LV (JEOL Ltd., Японія),</li>
                 <li>енергодисперсійний спектрометр X-Max 50 (OXFORD Instruments Analytical,
                   Великобританія);</li>
                 <li>детектор дифракції електронів HKL Channel 5 EBSD (OXFORD Instruments Analytical,
@@ -146,7 +146,6 @@
 					<p>	&#169 2021 <a href="home.html">Інститут монокристалів НАН України</a>. All Rights Reserved</p>
 				</div>
 			</div>
-			<span class=" bg-img-2"></span>
 		</footer>
 	</div>
 		
