--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,7 @@
 				<span class="bg-img bg-page bg-img-1"><img src="images/bg-img-1.svg" alt="img"></span>
 			</div>
 		</header>
-		<main id="main">
+		<main id="main" class="main">
       <section class="section section-publications">
         <div class="container">
           <ul uk-accordion>
@@ -782,7 +782,6 @@
 					<p>	&#169 2021 <a href="home.html">Інститут монокристалів НАН України</a>. All Rights Reserved</p>
 				</div>
 			</div>
-			<span class="bg-img bg-page bg-img-2"><img src="images/bg-img-1.svg" alt="img"></span>
 		</footer>
 	</div>
 		
